[package]
name = "refocus"
version = "0.1.0"
edition = "2021"
authors = ["ohblonddev@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
derive-getters = "0.2"
notify-rust = "4.5"